--- a/.prettierrc
+++ b/.prettierrc
@@ -11,7 +11,7 @@
   "requirePragma": false,
   "semi": true,
   "singleQuote": false,
-  "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false
+  "useTabs": false,
+  "parser": "babel"
 }
