--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-astro": "^0.31.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react": "^7.32.2",
