--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "prettier-plugin-astro": "^0.12.2",
     "sass": "^1.55.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "npm@10.2.5"
 }
