--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "include": ["**/*.ts", "**/*.tsx", "**/*.astro"]
 }
